<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_task">Create Task</string>
    <string name="action_settings">Settings</string>
    <string name="Priority">Priority:</string>
    <string name="High">High</string>
    <string name="Medium">Medium</string>
    <string name="Low">Low</string>
    <string name="Save">Save</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="taskInformation">Task Information</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="title_activity_edit_task">Edit Task</string>

</resources>
